--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -32,12 +32,15 @@ csv_delimiter = ,
 allow_multiline_step = false
 
 # Site to be tested
-site=
+site=https://ranku-api-dev.herokuapp.com
+
+#Multiple Test
+allow_scenario_datatable=true
 
 # Test Data file
 #test= RFITestData
 #test= SignUpLoginTestData
-test= TestData
+test= TestDataProgram
 
 # Environment for test execution
 environment = Dev
